Add more tests + Last commit before removing streaming API
* The streaming API deserves to be shelved for now. Maybe a future
  version can work on it.
* Now using latest version of JUnit Jupiter in order to
  parameterize KeyPathTest (experimental feature)