@@ -42,10 +42,10 @@ public class LibraryLangTest {
 
     @Test
     public void loadArabic() {
-        assert LibraryLang.loadLang(new Locale("ar")) instanceof LibraryLangAr;
-        assert LibraryLang.loadLang(new Locale("ar", "JO")) instanceof LibraryLangAr;
-        assert LibraryLang.loadLang(new Locale("ar", "EG")) instanceof LibraryLangAr;
-        assert LibraryLang.loadLang(new Locale("ar", "DZ")) instanceof LibraryLangAr;
+        assert LibraryLang.loadLang(Locale.of("ar")) instanceof LibraryLangAr;
+        assert LibraryLang.loadLang(Locale.of("ar", "JO")) instanceof LibraryLangAr;
+        assert LibraryLang.loadLang(Locale.of("ar", "EG")) instanceof LibraryLangAr;
+        assert LibraryLang.loadLang(Locale.of("ar", "DZ")) instanceof LibraryLangAr;
     }
 
     @Test
@@ -65,7 +65,7 @@ public class LibraryLangTest {
     @Test
     public void preserveDialect() {
         assertEquals(Locale.CANADA, LibraryLang.loadLang(Locale.CANADA).getLocale());
-        Locale arJo = new Locale("ar", "JO");
+        Locale arJo = Locale.of("ar", "JO");
         assertEquals(arJo, LibraryLang.loadLang(arJo).getLocale());
     }
 }
